force-app/main/default/objects/Account/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Empleado Actinver</label>
    <length>200</length>
    <type>Text</type>
</CustomField>