force-app/main/default/objects/Account/fields/EnrolamientoActivo__c.field-meta.xml
<CustomField>
    <fullName>EnrolamientoActivo__c</fullName>
    <label>Usuario BE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Activo</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>No Activo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>