force-app/main/default/objects/Account/fields/EnrolamientoBiometricos__c.field-meta.xml
<CustomField>
    <fullName>EnrolamientoBiometricos__c</fullName>
    <label>Enrolamiento Biométricos</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Enrolado</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>No enrolado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>