force-app/main/default/objects/Account/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Estatus del enrolamiento</description>
    <label>Registro BE</label>
    <type>Checkbox</type>
</CustomField>