force-app/main/default/objects/Account/fields/EnrollmentElectronicBanking__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentElectronicBanking__c</fullName>
    <label>Enrolamiento En Banca Electronica</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Básico</fullName>
            </value>
            <value>
                <fullName>Avanzado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>