force-app/main/default/objects/Account/fields/Es_empleado_Actinver__c.field-meta.xml
<CustomField>
    <fullName>Es_empleado_Actinver__c</fullName>
    <formula>Employee__c=&quot;X&quot; || Employee__c=&quot;x&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es empleado Actinver</label>
    <type>Checkbox</type>
</CustomField>