force-app/main/default/objects/Account/fields/EstatusContacto__c.field-meta.xml
<CustomField>
    <fullName>EstatusContacto__c</fullName>
    <label>Etapa contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacto efectivo exitoso</fullName>
            </value>
            <value>
                <fullName>Contacto no exitoso</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Cliente no quiere ser contactado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>