force-app/main/default/objects/Account/fields/estrategia_fiscal__c.field-meta.xml
<CustomField>
    <fullName>estrategia_fiscal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requiere estrategia fiscal</label>
    <type>Checkbox</type>
</CustomField>