force-app/main/default/objects/Account/fields/Estudiaoestudianfueradelpais__c.field-meta.xml
<CustomField>
    <fullName>Estudiaoestudianfueradelpais__c</fullName>
    <label>¿Estudia o estudian fuera del país?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No, pero lo tenemos planeado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>