force-app/main/default/objects/Account/fields/Evalua_Nombre_de_la_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Evalua_Nombre_de_la_Cuenta__c</fullName>
    <formula>IF(
    IsPersonAccount,
    /* PERSON ACCOUNT */
    AND(
        NOT(ISBLANK(FirstName)),
        NOT(ISBLANK(LastName)),
        TRIM(FirstName) = UPPER(TRIM(FirstName)),
        TRIM(LastName) = UPPER(TRIM(LastName))
    ),
    /* ACCOUNT NORMAL */
    AND(
        NOT(ISBLANK(Name)),
        TRIM(Name) = UPPER(TRIM(Name))
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evalua Nombre de la Cuenta</label>
    <type>Checkbox</type>
</CustomField>