force-app/main/default/objects/Account/fields/ExternalIdLead__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdLead__c</fullName>
    <description>Id Externo del prospecto, es campo solo sera populasi si la cuenta es convertida de un prospecto. Se popula desde el  mappin field de Lead</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ExternalIdLead</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>