force-app/main/default/objects/Account/fields/F3_Clasificacion_Persona__c.field-meta.xml
<CustomField>
    <fullName>F3_Clasificacion_Persona__c</fullName>
    <label>Clasificación Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Empleado</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Actividad empresarial</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Profesionista Independiente</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Sin Actividad Económica</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Persona Moral</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Otros</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>No Aplica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>