force-app/main/default/objects/Account/fields/F3_CURP__c.field-meta.xml
<CustomField>
    <fullName>F3_CURP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CURP</label>
    <length>18</length>
    <type>Text</type>
</CustomField>