force-app/main/default/objects/Account/fields/F3_Posicion_Global__c.field-meta.xml
<CustomField>
    <fullName>F3_Posicion_Global__c</fullName>
    <label>Posición Global</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>