force-app/main/default/objects/Account/fields/F3_Sucursal__c.field-meta.xml
<CustomField>
    <fullName>F3_Sucursal__c</fullName>
    <formula>Owner.F3_Sucursal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sucursal</label>
    <type>Text</type>
</CustomField>