force-app/main/default/objects/Account/fields/FamiliarqueseaclienteenActinver__c.field-meta.xml
<CustomField>
    <fullName>FamiliarqueseaclienteenActinver__c</fullName>
    <label>¿Familiar que sea cliente en Actinver?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>