force-app/main/default/objects/Account/fields/FechaAntiguedad__c.field-meta.xml
<CustomField>
    <fullName>FechaAntiguedad__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha antigüedad</label>
    <type>Date</type>
</CustomField>