force-app/main/default/objects/Account/fields/FechaEnrolamiento__c.field-meta.xml
<CustomField>
    <fullName>FechaEnrolamiento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Enrolamiento</label>
    <type>Date</type>
</CustomField>