force-app/main/default/objects/Account/fields/FechaNoRequiereSerContacto__c.field-meta.xml
<CustomField>
    <fullName>FechaNoRequiereSerContacto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha no requiere ser contactado</label>
    <type>Date</type>
</CustomField>