force-app/main/default/objects/Account/fields/FechaSiguienteContacto__c.field-meta.xml
<CustomField>
    <fullName>FechaSiguienteContacto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha siguiente contacto</label>
    <type>Date</type>
</CustomField>