force-app/main/default/objects/Account/fields/FechaSiguienteVisita__c.field-meta.xml
<CustomField>
    <fullName>FechaSiguienteVisita__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha siguiente visita</label>
    <type>Date</type>
</CustomField>