force-app/main/default/objects/Account/fields/FechaUltimaVisita__c.field-meta.xml
<CustomField>
    <fullName>FechaUltimaVisita__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha última visita</label>
    <type>Date</type>
</CustomField>