force-app/main/default/objects/Account/fields/FechaUltimoContacto__c.field-meta.xml
<CustomField>
    <fullName>FechaUltimoContacto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha último contacto</label>
    <type>Date</type>
</CustomField>