force-app/main/default/objects/Account/fields/FichaAfinidadCompletada__c.field-meta.xml
<CustomField>
    <fullName>FichaAfinidadCompletada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ficha de afinidad completada</label>
    <type>Checkbox</type>
</CustomField>