force-app/main/default/objects/Account/fields/FinServ__BorrowingPriorities__c.field-meta.xml
<CustomField>
    <fullName>FinServ__BorrowingPriorities__c</fullName>
    <label>Borrowing Priorities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Build Equity</fullName>
                <label>Construir equidad</label>
            </value>
            <value>
                <fullName>Debt Consolidation</fullName>
                <label>Consolidación de la deuda</label>
            </value>
            <value>
                <fullName>Education</fullName>
                <label>Educación</label>
            </value>
            <value>
                <fullName>Investments</fullName>
                <label>Inversiones</label>
            </value>
            <value>
                <fullName>Large Capital Purchases</fullName>
                <label>Grandes Compras de Capital</label>
            </value>
            <value>
                <fullName>Property Purchase</fullName>
                <label>Compra de Propiedades</label>
            </value>
            <value>
                <fullName>Renovations</fullName>
                <label>Renovaciones</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>