force-app/main/default/objects/Account/fields/FinServ__CustomerType__c.field-meta.xml
<CustomField>
    <fullName>FinServ__CustomerType__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Transaction</fullName>
                <label>Transacción</label>
            </value>
            <value>
                <fullName>Relational</fullName>
                <label>Relacional</label>
            </value>
            <value>
                <fullName>Borrower</fullName>
                <label>Prestatario</label>
            </value>
            <value>
                <fullName>Investor</fullName>
                <label>Inversionista</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>