force-app/main/default/objects/Account/fields/FinServ__IndividualType__c.field-meta.xml
<CustomField>
    <fullName>FinServ__IndividualType__c</fullName>
    <description>Individual Type</description>
    <label>Individual Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
                <label>Grupo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>