force-app/main/default/objects/Account/fields/FinServ__InsuranceCustomerSince__c.field-meta.xml
<CustomField>
    <fullName>FinServ__InsuranceCustomerSince__c</fullName>
    <description>Represents the insurance relationship start date. This field can be used in both B2B, and B2C cases</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurance Customer Since</label>
    <type>Date</type>
</CustomField>