force-app/main/default/objects/Account/fields/FinServ__RiskTolerance__c.field-meta.xml
<CustomField>
    <fullName>FinServ__RiskTolerance__c</fullName>
    <label>Risk Tolerance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aggressive</fullName>
                <label>Agresivo</label>
            </value>
            <value>
                <fullName>Conservative</fullName>
                <label>Conservador</label>
            </value>
            <value>
                <fullName>Moderate</fullName>
                <label>Moderado</label>
            </value>
            <value>
                <fullName>None</fullName>
                <label>Ninguno</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>