force-app/main/default/objects/Account/fields/FinServ__Status__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <label>Activo</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <label>Cerrado</label>
            </value>
            <value>
                <fullName>Deceased</fullName>
                <label>Fallecido</label>
            </value>
            <value>
                <fullName>Deliquent</fullName>
                <label>Delincuente</label>
            </value>
            <value>
                <fullName>Dormant</fullName>
                <label>Latente</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <label>Inactivo</label>
            </value>
            <value>
                <fullName>Onboarding</fullName>
                <label>Inductivo</label>
            </value>
            <value>
                <fullName>Prospect</fullName>
                <label>Prospecto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>