force-app/main/default/objects/Account/fields/First_LastName__c.field-meta.xml
<CustomField>
    <fullName>First_LastName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Apellido Paterno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>