force-app/main/default/objects/Account/fields/Frecuencia_para_ser_contactado__c.field-meta.xml
<CustomField>
    <fullName>Frecuencia_para_ser_contactado__c</fullName>
    <label>Frecuencia para ser contactado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cada mes</fullName>
            </value>
            <value>
                <fullName>Cada dos meses</fullName>
            </value>
            <value>
                <fullName>Cada tres meses</fullName>
            </value>
            <value>
                <fullName>Cada cuatro meses</fullName>
            </value>
            <value>
                <fullName>Cada seis meses</fullName>
            </value>
            <value>
                <fullName>Una vez al año</fullName>
            </value>
            <value>
                <fullName>El cliente prefiere contactarse con nosotros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>